Fix sidebar top being cut off on mobile browsers (#2363)
This pull request fixes an issue where the top of the sidebar is cut off
on mobile browsers.
Closes #2358

I was able to reproduce this issue on Safari on iPhone.

## Why this happens

Using `height: 100vh` can cause layout issues on mobile browsers because
it does not account for the address bar.

As a result, the top of the sidebar can be cut off.

## Solution

Use `dvh` instead of `vh`, since it accounts for the dynamic viewport
height.

---------

--- a/src/pydata_sphinx_theme/assets/styles/sections/_sidebar-toggle.scss
+++ b/src/pydata_sphinx_theme/assets/styles/sections/_sidebar-toggle.scss
@@ -19,8 +19,8 @@
   position: fixed;
   top: 0;
   z-index: $zindex-modal;
-  height: 100vh;
-  max-height: 100vh;
+  height: 100dvh;
+  max-height: 100dvh;
   width: 75%;
   flex-grow: 0.75;
   max-width: 350px;
